--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="main__content">
                     <h1>Next Generation</h1>
                     <h2>Technology</h2>
-                    <p>see what makes us diffrent </p>
+                    <p>see what makes us diffrent. </p>
                     <button class="main_btn" ><a href="/">Get Started</a></button>
                 </div>
 
