--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
         <meta name="viewport" content="width-device-width,initial-scale=1.0">
         <title>Next website</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&display=swap" rel="stylesheet">
 
     </head>
     <body>
         <!--Navbar Section -->
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="/" id="navbar__logo">SMF</a>
+                <a href="/" id="navbar__logo">Z.A.B</a>
                 <div class="navbar__toogle" id="mobil-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -46,10 +49,14 @@
         <div class="main">
             <div class="main__container">
                 <div class="main__content">
-                    <h1>Next Generation</h1>
-                    <h2>Technology</h2>
-                    <p>see what makes us diffrent. </p>
+                    <h1>Zeynel Ali Bingöl</h1>
+                    <h2>............</h2>
+                    <p>Duymak isteyene fısıldasan yeter. <br> (Just whisper to those <br> who want to hear.) </p>
                     <button class="main_btn" ><a href="/">Get Started</a></button>
+
+                </div>
+                <div class="main__img--container">
+                    <img src="/foto/pic1.svg" alt="pic" id="main__img">
                 </div>
 
             </div>
