--- a/index.html
+++ b/index.html
@@ -42,14 +42,33 @@
                 <div class="main__content">
                     <h1>ZEZE</h1>
                     <h2>I'M LEARNING</h2>
-                    <p>See what makes us diffirent</p>  
+                    <p>See what makes us different</p>  
                     <button class="main_btn" ><a href="/">Get Started</a></button>
                 </div>
                 <div class="main__img--container">
                     <img src="/foto/pic1.svg" alt="pic" id="main__img">
                 </div>
+                <div class="services__card">
+                    <h2>Experience Bliss </h2>
+                    <p>Zeze's Power Music</p>
+                    <button>Get Started</button>
+                </div>
             </div>
         </div>
+
+        <!--SErvices Section-->
+        <div class="services">
+            <h1>See what the type is about</h1>
+            <div class="services__container">
+                <div class="services__card">
+                    <h2>Are You Ready?</h2>
+                    <p>Take the leap</p>
+                    <button>Get Started</button>
+                </div>
+            </div>
+        </div>
+        <!--Footer Section-->
+        
         <script src="/app.js"></script>
     </body>
 </html>
